deployment/monitor/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  labels:
    app: monitor
    app.openshift.io/runtime: openshift
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      volumes:
        - name: docroot
          emptyDir: {}
        - name: netpol-monitor-html
          configMap:
            name: netpol-monitor-html
      serviceAccountName: monitor
      automountServiceAccountToken: true
      containers:
      - image:  image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
        name: monitor
        volumeMounts:
          - name: docroot
            mountPath: /docroot/
          - name: netpol-monitor-html
            mountPath: /netpol-monitor-html/
        securityContext:
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
        # resources:
        #   limits:
        #     ephemeral-storage: 40Mi
        #     cpu: 0.1
        #     memory: "20Mi"
        #   requests:
        #     ephemeral-storage: 20Mi
        #     cpu: 0.1
        #     memory: "20Mi"
        command:
          - /bin/sh
          - -c
          - |
            [...]
      - image: registry.access.redhat.com/ubi9/nginx-122:latest
        name: nginx
        ports:
          - name: http
            containerPort: 8080
        securityContext:
          readOnlyRootFilesystem: false
        resources:
          limits:
            ephemeral-storage: 40Mi
            cpu: 0.5
            memory: "256Mi"
          requests:
            ephemeral-storage: 20Mi
            cpu: 0.5
            memory: "256Mi"
        volumeMounts:
          - name: docroot
            mountPath: /opt/app-root/src/
        command:
          - /bin/sh
          - -c
          - |

            /usr/libexec/s2i/run
