deployment/monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor
  name: monitor
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: monitor
  sessionAffinity: None
  type: ClusterIP
